Fixed bug in detect overlap

--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,5 @@
 .App {
   text-align: center;
-  overflow-x: hidden;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .bound0 {
@@ -45,6 +9,7 @@
   left:0px;
   width: 100px;
   height: 100px;
+  z-index: -1;
 }
 
 .bound1 {
@@ -54,4 +19,17 @@
   right: 0px;
   width: 100px;
   height: 100px;
+  z-index: -1;
+}
+
+#discard {
+  position: fixed;
+  top: 430px;
+  left: 110px;
+}
+
+#keep {
+  position: fixed;
+  top: 430px;
+  right: 110px;
 }
